Temporary hackery to allow admins to upload boards when creating games in the back parlor. We'll need to make this far more user friendly and robust before the players can use it.